[package]
name = "esp-zerobot"
version = "0.1.0"
authors = ["Vasily Khoruzhick <anarsoul@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "esp-zerobot"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
smart-leds = "0.4.0"
ws2812-spi = "0.5.0"
esp-idf-hal = "0.45.2"
tcs3472 = "1.0.0"

[build-dependencies]
embuild = "0.33"
